[gd_scene load_steps=25 format=4 uid="uid://cq4oon1lut0ym"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_2q6i0"]
[ext_resource type="Texture2D" uid="uid://nxwkmp1qsgqv" path="res://assets/player/movement/down/down_idle.png" id="1_3jhjs"]
[ext_resource type="Texture2D" uid="uid://vn61hcvvx10k" path="res://assets/player/damaged/damaged_player.png" id="1_m7sx6"]
[ext_resource type="Texture2D" uid="uid://d4sjac4e7nsb" path="res://assets/player/movement/down/down_left_walk.png" id="2_7h005"]
[ext_resource type="Texture2D" uid="uid://bi5hbu76uxknn" path="res://assets/player/died/died.png" id="2_cqsmi"]
[ext_resource type="Texture2D" uid="uid://dww3suns7x3fq" path="res://assets/player/movement/down/down_right_walk.png" id="3_hrgc5"]
[ext_resource type="Texture2D" uid="uid://dhgsa4wbqd5o3" path="res://assets/player/movement/left_side/left_side_idle1.png" id="4_takxe"]
[ext_resource type="Texture2D" uid="uid://1gn78jjswpce" path="res://assets/player/movement/left_side/left_side_walk1.png" id="5_5q4xy"]
[ext_resource type="Texture2D" uid="uid://base1uvfq2pie" path="res://assets/player/movement/left_side/left_side_walk2.png" id="6_brfy5"]
[ext_resource type="Texture2D" uid="uid://mt54jwwpujgq" path="res://assets/player/movement/right_side/right_side_idle.png" id="7_hcsof"]
[ext_resource type="Texture2D" uid="uid://bwr0w71t47xha" path="res://assets/player/movement/right_side/right_side_walk1.png" id="8_hl6md"]
[ext_resource type="Texture2D" uid="uid://cqqhsu7v4axii" path="res://assets/player/movement/right_side/right_side_walk2.png" id="9_vanmf"]
[ext_resource type="Texture2D" uid="uid://bd2am1am2h1bo" path="res://assets/player/movement/up/up_idle.png" id="10_s2m3l"]
[ext_resource type="Texture2D" uid="uid://drvn4t1ow5dsl" path="res://assets/player/movement/up/up_left_walk.png" id="11_0qn6t"]
[ext_resource type="Texture2D" uid="uid://douvfkvqeaivg" path="res://assets/player/movement/up/up_right_walk.png" id="12_s87wf"]
[ext_resource type="Texture2D" uid="uid://cf2pyqxkwwi52" path="res://assets/player/mission taskbar/taskbar.jpg" id="16_21rr8"]
[ext_resource type="Script" path="res://scripts/missions.gd" id="17_qhoic"]
[ext_resource type="Texture2D" uid="uid://6bwka55cwlb7" path="res://assets/player/mission taskbar/check_box.jpg" id="18_fl120"]
[ext_resource type="Texture2D" uid="uid://bmw7lr2fr48fe" path="res://assets/player/mission taskbar/empty_taskbar.jpg" id="19_rjgqu"]

[sub_resource type="SpriteFrames" id="SpriteFrames_1h0uw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_m7sx6")
}],
"loop": true,
"name": &"damaged",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_cqsmi")
}],
"loop": true,
"name": &"died",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3jhjs")
}],
"loop": true,
"name": &"down_side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_3jhjs")
}, {
"duration": 1.0,
"texture": ExtResource("2_7h005")
}, {
"duration": 1.0,
"texture": ExtResource("3_hrgc5")
}],
"loop": true,
"name": &"down_side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_takxe")
}],
"loop": true,
"name": &"left_side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_takxe")
}, {
"duration": 1.0,
"texture": ExtResource("5_5q4xy")
}, {
"duration": 1.0,
"texture": ExtResource("6_brfy5")
}],
"loop": true,
"name": &"left_side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_hcsof")
}],
"loop": true,
"name": &"right_side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_hcsof")
}, {
"duration": 1.0,
"texture": ExtResource("8_hl6md")
}, {
"duration": 1.0,
"texture": ExtResource("9_vanmf")
}],
"loop": true,
"name": &"right_side_walk",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_s2m3l")
}],
"loop": true,
"name": &"up_side_idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_s2m3l")
}, {
"duration": 1.0,
"texture": ExtResource("11_0qn6t")
}, {
"duration": 1.0,
"texture": ExtResource("12_s87wf")
}],
"loop": true,
"name": &"up_side_walk",
"speed": 5.0
}]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5mhkx"]
texture = ExtResource("16_21rr8")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
20:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
20:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
20:2/0 = 0
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
24:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
20:3/0 = 0
21:3/0 = 0
22:3/0 = 0
23:3/0 = 0
24:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
19:4/0 = 0
20:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
20:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
17:6/0 = 0
18:6/0 = 0
19:6/0 = 0
20:6/0 = 0
21:6/0 = 0
22:6/0 = 0
23:6/0 = 0
24:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0
8:7/0 = 0
9:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
13:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
17:7/0 = 0
18:7/0 = 0
19:7/0 = 0
20:7/0 = 0
21:7/0 = 0
22:7/0 = 0
23:7/0 = 0
24:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
7:8/0 = 0
8:8/0 = 0
9:8/0 = 0
10:8/0 = 0
11:8/0 = 0
12:8/0 = 0
13:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
17:8/0 = 0
18:8/0 = 0
19:8/0 = 0
20:8/0 = 0
21:8/0 = 0
22:8/0 = 0
23:8/0 = 0
24:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
7:9/0 = 0
8:9/0 = 0
9:9/0 = 0
10:9/0 = 0
11:9/0 = 0
12:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
17:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
21:9/0 = 0
22:9/0 = 0
23:9/0 = 0
24:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
12:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
17:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
21:10/0 = 0
22:10/0 = 0
23:10/0 = 0
24:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
12:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
17:11/0 = 0
18:11/0 = 0
19:11/0 = 0
20:11/0 = 0
21:11/0 = 0
22:11/0 = 0
23:11/0 = 0
24:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
7:12/0 = 0
8:12/0 = 0
9:12/0 = 0
10:12/0 = 0
11:12/0 = 0
12:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
17:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
21:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
12:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
17:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
21:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
0:14/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
5:14/0 = 0
6:14/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
12:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
17:14/0 = 0
18:14/0 = 0
19:14/0 = 0
20:14/0 = 0
21:14/0 = 0
22:14/0 = 0
23:14/0 = 0
24:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
6:15/0 = 0
7:15/0 = 0
8:15/0 = 0
9:15/0 = 0
10:15/0 = 0
11:15/0 = 0
12:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
17:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
21:15/0 = 0
22:15/0 = 0
23:15/0 = 0
24:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
6:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
12:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
17:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
21:16/0 = 0
22:16/0 = 0
23:16/0 = 0
24:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
5:17/0 = 0
6:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
12:17/0 = 0
13:17/0 = 0
14:17/0 = 0
15:17/0 = 0
16:17/0 = 0
17:17/0 = 0
18:17/0 = 0
19:17/0 = 0
20:17/0 = 0
21:17/0 = 0
22:17/0 = 0
23:17/0 = 0
24:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
6:18/0 = 0
7:18/0 = 0
8:18/0 = 0
9:18/0 = 0
10:18/0 = 0
11:18/0 = 0
12:18/0 = 0
13:18/0 = 0
14:18/0 = 0
15:18/0 = 0
16:18/0 = 0
17:18/0 = 0
18:18/0 = 0
19:18/0 = 0
20:18/0 = 0
21:18/0 = 0
22:18/0 = 0
23:18/0 = 0
24:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
6:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
23:19/0 = 0
24:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
6:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
23:20/0 = 0
24:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
5:21/0 = 0
6:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
20:21/0 = 0
21:21/0 = 0
22:21/0 = 0
23:21/0 = 0
24:21/0 = 0
0:22/0 = 0
1:22/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
5:22/0 = 0
6:22/0 = 0
7:22/0 = 0
8:22/0 = 0
9:22/0 = 0
10:22/0 = 0
11:22/0 = 0
12:22/0 = 0
13:22/0 = 0
14:22/0 = 0
15:22/0 = 0
16:22/0 = 0
17:22/0 = 0
18:22/0 = 0
19:22/0 = 0
20:22/0 = 0
21:22/0 = 0
22:22/0 = 0
23:22/0 = 0
24:22/0 = 0
0:23/0 = 0
1:23/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
5:23/0 = 0
6:23/0 = 0
7:23/0 = 0
8:23/0 = 0
9:23/0 = 0
10:23/0 = 0
11:23/0 = 0
12:23/0 = 0
13:23/0 = 0
14:23/0 = 0
15:23/0 = 0
16:23/0 = 0
17:23/0 = 0
18:23/0 = 0
19:23/0 = 0
20:23/0 = 0
21:23/0 = 0
22:23/0 = 0
23:23/0 = 0
24:23/0 = 0
0:24/0 = 0
1:24/0 = 0
2:24/0 = 0
3:24/0 = 0
4:24/0 = 0
5:24/0 = 0
6:24/0 = 0
7:24/0 = 0
8:24/0 = 0
9:24/0 = 0
10:24/0 = 0
11:24/0 = 0
12:24/0 = 0
13:24/0 = 0
14:24/0 = 0
15:24/0 = 0
16:24/0 = 0
17:24/0 = 0
18:24/0 = 0
19:24/0 = 0
20:24/0 = 0
21:24/0 = 0
22:24/0 = 0
23:24/0 = 0
24:24/0 = 0
0:25/0 = 0
1:25/0 = 0
2:25/0 = 0
3:25/0 = 0
4:25/0 = 0
5:25/0 = 0
6:25/0 = 0
7:25/0 = 0
8:25/0 = 0
9:25/0 = 0
10:25/0 = 0
11:25/0 = 0
12:25/0 = 0
13:25/0 = 0
14:25/0 = 0
15:25/0 = 0
16:25/0 = 0
17:25/0 = 0
18:25/0 = 0
19:25/0 = 0
20:25/0 = 0
21:25/0 = 0
22:25/0 = 0
23:25/0 = 0
24:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
5:26/0 = 0
6:26/0 = 0
7:26/0 = 0
8:26/0 = 0
9:26/0 = 0
10:26/0 = 0
11:26/0 = 0
12:26/0 = 0
13:26/0 = 0
14:26/0 = 0
15:26/0 = 0
16:26/0 = 0
17:26/0 = 0
18:26/0 = 0
19:26/0 = 0
20:26/0 = 0
21:26/0 = 0
22:26/0 = 0
23:26/0 = 0
24:26/0 = 0

[sub_resource type="TileSet" id="TileSet_boqqa"]
sources/0 = SubResource("TileSetAtlasSource_5mhkx")

[sub_resource type="SpriteFrames" id="SpriteFrames_j3k32"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("18_fl120")
}],
"loop": true,
"name": &"check",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_rjgqu")
}],
"loop": true,
"name": &"not_check",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3u0wd"]
size = Vector2(37, 70)

[node name="player" type="CharacterBody2D"]
script = ExtResource("1_2q6i0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.1, 0.1)
sprite_frames = SubResource("SpriteFrames_1h0uw")
animation = &"left_side_walk"
frame = 1
frame_progress = 0.476563

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Camera2D" type="Camera2D" parent="."]

[node name="mission_taskbar" type="TileMapLayer" parent="."]
position = Vector2(281, -156)
scale = Vector2(0.5, 0.5)
tile_map_data = PackedByteArray("AAALAOz/AAAAAAAAAAALAO3/AAAAAAEAAAALAO7/AAAAAAIAAAALAO//AAAAAAMAAAALAPD/AAAAAAQAAAALAPH/AAAAAAUAAAALAPL/AAAAAAYAAAALAPP/AAAAAAcAAAALAPT/AAAAAAgAAAALAPX/AAAAAAkAAAALAPb/AAAAAAoAAAALAPf/AAAAAAsAAAALAPj/AAAAAAwAAAALAPn/AAAAAA0AAAALAPr/AAAAAA4AAAALAPv/AAAAAA8AAAALAPz/AAAAABAAAAALAP3/AAAAABEAAAALAP7/AAAAABIAAAALAP//AAAAABMAAAALAAAAAAAAABQAAAALAAEAAAAAABUAAAALAAIAAAAAABYAAAALAAMAAAAAABcAAAALAAQAAAAAABgAAAALAAUAAAAAABkAAAALAAYAAAAAABoAAAAMAOz/AAABAAAAAAAMAO3/AAABAAEAAAAMAO7/AAABAAIAAAAMAO//AAABAAMAAAAMAPD/AAABAAQAAAAMAPH/AAABAAUAAAAMAPL/AAABAAYAAAAMAPP/AAABAAcAAAAMAPT/AAABAAgAAAAMAPX/AAABAAkAAAAMAPb/AAABAAoAAAAMAPf/AAABAAsAAAAMAPj/AAABAAwAAAAMAPn/AAABAA0AAAAMAPr/AAABAA4AAAAMAPv/AAABAA8AAAAMAPz/AAABABAAAAAMAP3/AAABABEAAAAMAP7/AAABABIAAAAMAP//AAABABMAAAAMAAAAAAABABQAAAAMAAEAAAABABUAAAAMAAIAAAABABYAAAAMAAMAAAABABcAAAAMAAQAAAABABgAAAAMAAUAAAABABkAAAAMAAYAAAABABoAAAANAOz/AAACAAAAAAANAO3/AAACAAEAAAANAO7/AAACAAIAAAANAO//AAACAAMAAAANAPD/AAACAAQAAAANAPH/AAACAAUAAAANAPL/AAACAAYAAAANAPP/AAACAAcAAAANAPT/AAACAAgAAAANAPX/AAACAAkAAAANAPb/AAACAAoAAAANAPf/AAACAAsAAAANAPj/AAACAAwAAAANAPn/AAACAA0AAAANAPr/AAACAA4AAAANAPv/AAACAA8AAAANAPz/AAACABAAAAANAP3/AAACABEAAAANAP7/AAACABIAAAANAP//AAACABMAAAANAAAAAAACABQAAAANAAEAAAACABUAAAANAAIAAAACABYAAAANAAMAAAACABcAAAANAAQAAAACABgAAAANAAUAAAACABkAAAANAAYAAAACABoAAAAOAOz/AAADAAAAAAAOAO3/AAADAAEAAAAOAO7/AAADAAIAAAAOAO//AAADAAMAAAAOAPD/AAADAAQAAAAOAPH/AAADAAUAAAAOAPL/AAADAAYAAAAOAPP/AAADAAcAAAAOAPT/AAADAAgAAAAOAPX/AAADAAkAAAAOAPb/AAADAAoAAAAOAPf/AAADAAsAAAAOAPj/AAADAAwAAAAOAPn/AAADAA0AAAAOAPr/AAADAA4AAAAOAPv/AAADAA8AAAAOAPz/AAADABAAAAAOAP3/AAADABEAAAAOAP7/AAADABIAAAAOAP//AAADABMAAAAOAAAAAAADABQAAAAOAAEAAAADABUAAAAOAAIAAAADABYAAAAOAAMAAAADABcAAAAOAAQAAAADABgAAAAOAAUAAAADABkAAAAOAAYAAAADABoAAAAPAOz/AAAEAAAAAAAPAO3/AAAEAAEAAAAPAO7/AAAEAAIAAAAPAO//AAAEAAMAAAAPAPD/AAAEAAQAAAAPAPH/AAAEAAUAAAAPAPL/AAAEAAYAAAAPAPP/AAAEAAcAAAAPAPT/AAAEAAgAAAAPAPX/AAAEAAkAAAAPAPb/AAAEAAoAAAAPAPf/AAAEAAsAAAAPAPj/AAAEAAwAAAAPAPn/AAAEAA0AAAAPAPr/AAAEAA4AAAAPAPv/AAAEAA8AAAAPAPz/AAAEABAAAAAPAP3/AAAEABEAAAAPAP7/AAAEABIAAAAPAP//AAAEABMAAAAPAAAAAAAEABQAAAAPAAEAAAAEABUAAAAPAAIAAAAEABYAAAAPAAMAAAAEABcAAAAPAAQAAAAEABgAAAAPAAUAAAAEABkAAAAPAAYAAAAEABoAAAAQAOz/AAAFAAAAAAAQAO3/AAAFAAEAAAAQAO7/AAAFAAIAAAAQAO//AAAFAAMAAAAQAPD/AAAFAAQAAAAQAPH/AAAFAAUAAAAQAPL/AAAFAAYAAAAQAPP/AAAFAAcAAAAQAPT/AAAFAAgAAAAQAPX/AAAFAAkAAAAQAPb/AAAFAAoAAAAQAPf/AAAFAAsAAAAQAPj/AAAFAAwAAAAQAPn/AAAFAA0AAAAQAPr/AAAFAA4AAAAQAPv/AAAFAA8AAAAQAPz/AAAFABAAAAAQAP3/AAAFABEAAAAQAP7/AAAFABIAAAAQAP//AAAFABMAAAAQAAAAAAAFABQAAAAQAAEAAAAFABUAAAAQAAIAAAAFABYAAAAQAAMAAAAFABcAAAAQAAQAAAAFABgAAAAQAAUAAAAFABkAAAAQAAYAAAAFABoAAAARAOz/AAAGAAAAAAARAO3/AAAGAAEAAAARAO7/AAAGAAIAAAARAO//AAAGAAMAAAARAPD/AAAGAAQAAAARAPH/AAAGAAUAAAARAPL/AAAGAAYAAAARAPP/AAAGAAcAAAARAPT/AAAGAAgAAAARAPX/AAAGAAkAAAARAPb/AAAGAAoAAAARAPf/AAAGAAsAAAARAPj/AAAGAAwAAAARAPn/AAAGAA0AAAARAPr/AAAGAA4AAAARAPv/AAAGAA8AAAARAPz/AAAGABAAAAARAP3/AAAGABEAAAARAP7/AAAGABIAAAARAP//AAAGABMAAAARAAAAAAAGABQAAAARAAEAAAAGABUAAAARAAIAAAAGABYAAAARAAMAAAAGABcAAAARAAQAAAAGABgAAAARAAUAAAAGABkAAAARAAYAAAAGABoAAAASAOz/AAAHAAAAAAASAO3/AAAHAAEAAAASAO7/AAAHAAIAAAASAO//AAAHAAMAAAASAPD/AAAHAAQAAAASAPH/AAAHAAUAAAASAPL/AAAHAAYAAAASAPP/AAAHAAcAAAASAPT/AAAHAAgAAAASAPX/AAAHAAkAAAASAPb/AAAHAAoAAAASAPf/AAAHAAsAAAASAPj/AAAHAAwAAAASAPn/AAAHAA0AAAASAPr/AAAHAA4AAAASAPv/AAAHAA8AAAASAPz/AAAHABAAAAASAP3/AAAHABEAAAASAP7/AAAHABIAAAASAP//AAAHABMAAAASAAAAAAAHABQAAAASAAEAAAAHABUAAAASAAIAAAAHABYAAAASAAMAAAAHABcAAAASAAQAAAAHABgAAAASAAUAAAAHABkAAAASAAYAAAAHABoAAAATAOz/AAAIAAAAAAATAO3/AAAIAAEAAAATAO7/AAAIAAIAAAATAO//AAAIAAMAAAATAPD/AAAIAAQAAAATAPH/AAAIAAUAAAATAPL/AAAIAAYAAAATAPP/AAAIAAcAAAATAPT/AAAIAAgAAAATAPX/AAAIAAkAAAATAPb/AAAIAAoAAAATAPf/AAAIAAsAAAATAPj/AAAIAAwAAAATAPn/AAAIAA0AAAATAPr/AAAIAA4AAAATAPv/AAAIAA8AAAATAPz/AAAIABAAAAATAP3/AAAIABEAAAATAP7/AAAIABIAAAATAP//AAAIABMAAAATAAAAAAAIABQAAAATAAEAAAAIABUAAAATAAIAAAAIABYAAAATAAMAAAAIABcAAAATAAQAAAAIABgAAAATAAUAAAAIABkAAAATAAYAAAAIABoAAAAUAOz/AAAJAAAAAAAUAO3/AAAJAAEAAAAUAO7/AAAJAAIAAAAUAO//AAAJAAMAAAAUAPD/AAAJAAQAAAAUAPH/AAAJAAUAAAAUAPL/AAAJAAYAAAAUAPP/AAAJAAcAAAAUAPT/AAAJAAgAAAAUAPX/AAAJAAkAAAAUAPb/AAAJAAoAAAAUAPf/AAAJAAsAAAAUAPj/AAAJAAwAAAAUAPn/AAAJAA0AAAAUAPr/AAAJAA4AAAAUAPv/AAAJAA8AAAAUAPz/AAAJABAAAAAUAP3/AAAJABEAAAAUAP7/AAAJABIAAAAUAP//AAAJABMAAAAUAAAAAAAJABQAAAAUAAEAAAAJABUAAAAUAAIAAAAJABYAAAAUAAMAAAAJABcAAAAUAAQAAAAJABgAAAAUAAUAAAAJABkAAAAUAAYAAAAJABoAAAAVAOz/AAAKAAAAAAAVAO3/AAAKAAEAAAAVAO7/AAAKAAIAAAAVAO//AAAKAAMAAAAVAPD/AAAKAAQAAAAVAPH/AAAKAAUAAAAVAPL/AAAKAAYAAAAVAPP/AAAKAAcAAAAVAPT/AAAKAAgAAAAVAPX/AAAKAAkAAAAVAPb/AAAKAAoAAAAVAPf/AAAKAAsAAAAVAPj/AAAKAAwAAAAVAPn/AAAKAA0AAAAVAPr/AAAKAA4AAAAVAPv/AAAKAA8AAAAVAPz/AAAKABAAAAAVAP3/AAAKABEAAAAVAP7/AAAKABIAAAAVAP//AAAKABMAAAAVAAAAAAAKABQAAAAVAAEAAAAKABUAAAAVAAIAAAAKABYAAAAVAAMAAAAKABcAAAAVAAQAAAAKABgAAAAVAAUAAAAKABkAAAAVAAYAAAAKABoAAAAWAOz/AAALAAAAAAAWAO3/AAALAAEAAAAWAO7/AAALAAIAAAAWAO//AAALAAMAAAAWAPD/AAALAAQAAAAWAPH/AAALAAUAAAAWAPL/AAALAAYAAAAWAPP/AAALAAcAAAAWAPT/AAALAAgAAAAWAPX/AAALAAkAAAAWAPb/AAALAAoAAAAWAPf/AAALAAsAAAAWAPj/AAALAAwAAAAWAPn/AAALAA0AAAAWAPr/AAALAA4AAAAWAPv/AAALAA8AAAAWAPz/AAALABAAAAAWAP3/AAALABEAAAAWAP7/AAALABIAAAAWAP//AAALABMAAAAWAAAAAAALABQAAAAWAAEAAAALABUAAAAWAAIAAAALABYAAAAWAAMAAAALABcAAAAWAAQAAAALABgAAAAWAAUAAAALABkAAAAWAAYAAAALABoAAAAXAOz/AAAMAAAAAAAXAO3/AAAMAAEAAAAXAO7/AAAMAAIAAAAXAO//AAAMAAMAAAAXAPD/AAAMAAQAAAAXAPH/AAAMAAUAAAAXAPL/AAAMAAYAAAAXAPP/AAAMAAcAAAAXAPT/AAAMAAgAAAAXAPX/AAAMAAkAAAAXAPb/AAAMAAoAAAAXAPf/AAAMAAsAAAAXAPj/AAAMAAwAAAAXAPn/AAAMAA0AAAAXAPr/AAAMAA4AAAAXAPv/AAAMAA8AAAAXAPz/AAAMABAAAAAXAP3/AAAMABEAAAAXAP7/AAAMABIAAAAXAP//AAAMABMAAAAXAAAAAAAMABQAAAAXAAEAAAAMABUAAAAXAAIAAAAMABYAAAAXAAMAAAAMABcAAAAXAAQAAAAMABgAAAAXAAUAAAAMABkAAAAXAAYAAAAMABoAAAAYAOz/AAANAAAAAAAYAO3/AAANAAEAAAAYAO7/AAANAAIAAAAYAO//AAANAAMAAAAYAPD/AAANAAQAAAAYAPH/AAANAAUAAAAYAPL/AAANAAYAAAAYAPP/AAANAAcAAAAYAPT/AAANAAgAAAAYAPX/AAANAAkAAAAYAPb/AAANAAoAAAAYAPf/AAANAAsAAAAYAPj/AAANAAwAAAAYAPn/AAANAA0AAAAYAPr/AAANAA4AAAAYAPv/AAANAA8AAAAYAPz/AAANABAAAAAYAP3/AAANABEAAAAYAP7/AAANABIAAAAYAP//AAANABMAAAAYAAAAAAANABQAAAAYAAEAAAANABUAAAAYAAIAAAANABYAAAAYAAMAAAANABcAAAAYAAQAAAANABgAAAAYAAUAAAANABkAAAAYAAYAAAANABoAAAAZAOz/AAAOAAAAAAAZAO3/AAAOAAEAAAAZAO7/AAAOAAIAAAAZAO//AAAOAAMAAAAZAPD/AAAOAAQAAAAZAPH/AAAOAAUAAAAZAPL/AAAOAAYAAAAZAPP/AAAOAAcAAAAZAPT/AAAOAAgAAAAZAPX/AAAOAAkAAAAZAPb/AAAOAAoAAAAZAPf/AAAOAAsAAAAZAPj/AAAOAAwAAAAZAPn/AAAOAA0AAAAZAPr/AAAOAA4AAAAZAPv/AAAOAA8AAAAZAPz/AAAOABAAAAAZAP3/AAAOABEAAAAZAP7/AAAOABIAAAAZAP//AAAOABMAAAAZAAAAAAAOABQAAAAZAAEAAAAOABUAAAAZAAIAAAAOABYAAAAZAAMAAAAOABcAAAAZAAQAAAAOABgAAAAZAAUAAAAOABkAAAAZAAYAAAAOABoAAAAaAOz/AAAPAAAAAAAaAO3/AAAPAAEAAAAaAO7/AAAPAAIAAAAaAO//AAAPAAMAAAAaAPD/AAAPAAQAAAAaAPH/AAAPAAUAAAAaAPL/AAAPAAYAAAAaAPP/AAAPAAcAAAAaAPT/AAAPAAgAAAAaAPX/AAAPAAkAAAAaAPb/AAAPAAoAAAAaAPf/AAAPAAsAAAAaAPj/AAAPAAwAAAAaAPn/AAAPAA0AAAAaAPr/AAAPAA4AAAAaAPv/AAAPAA8AAAAaAPz/AAAPABAAAAAaAP3/AAAPABEAAAAaAP7/AAAPABIAAAAaAP//AAAPABMAAAAaAAAAAAAPABQAAAAaAAEAAAAPABUAAAAaAAIAAAAPABYAAAAaAAMAAAAPABcAAAAaAAQAAAAPABgAAAAaAAUAAAAPABkAAAAaAAYAAAAPABoAAAAbAOz/AAAQAAAAAAAbAO3/AAAQAAEAAAAbAO7/AAAQAAIAAAAbAO//AAAQAAMAAAAbAPD/AAAQAAQAAAAbAPH/AAAQAAUAAAAbAPL/AAAQAAYAAAAbAPP/AAAQAAcAAAAbAPT/AAAQAAgAAAAbAPX/AAAQAAkAAAAbAPb/AAAQAAoAAAAbAPf/AAAQAAsAAAAbAPj/AAAQAAwAAAAbAPn/AAAQAA0AAAAbAPr/AAAQAA4AAAAbAPv/AAAQAA8AAAAbAPz/AAAQABAAAAAbAP3/AAAQABEAAAAbAP7/AAAQABIAAAAbAP//AAAQABMAAAAbAAAAAAAQABQAAAAbAAEAAAAQABUAAAAbAAIAAAAQABYAAAAbAAMAAAAQABcAAAAbAAQAAAAQABgAAAAbAAUAAAAQABkAAAAbAAYAAAAQABoAAAAcAOz/AAARAAAAAAAcAO3/AAARAAEAAAAcAO7/AAARAAIAAAAcAO//AAARAAMAAAAcAPD/AAARAAQAAAAcAPH/AAARAAUAAAAcAPL/AAARAAYAAAAcAPP/AAARAAcAAAAcAPT/AAARAAgAAAAcAPX/AAARAAkAAAAcAPb/AAARAAoAAAAcAPf/AAARAAsAAAAcAPj/AAARAAwAAAAcAPn/AAARAA0AAAAcAPr/AAARAA4AAAAcAPv/AAARAA8AAAAcAPz/AAARABAAAAAcAP3/AAARABEAAAAcAP7/AAARABIAAAAcAP//AAARABMAAAAcAAAAAAARABQAAAAcAAEAAAARABUAAAAcAAIAAAARABYAAAAcAAMAAAARABcAAAAcAAQAAAARABgAAAAcAAUAAAARABkAAAAcAAYAAAARABoAAAAdAOz/AAASAAAAAAAdAO3/AAASAAEAAAAdAO7/AAASAAIAAAAdAO//AAASAAMAAAAdAPD/AAASAAQAAAAdAPH/AAASAAUAAAAdAPL/AAASAAYAAAAdAPP/AAASAAcAAAAdAPT/AAASAAgAAAAdAPX/AAASAAkAAAAdAPb/AAASAAoAAAAdAPf/AAASAAsAAAAdAPj/AAASAAwAAAAdAPn/AAASAA0AAAAdAPr/AAASAA4AAAAdAPv/AAASAA8AAAAdAPz/AAASABAAAAAdAP3/AAASABEAAAAdAP7/AAASABIAAAAdAP//AAASABMAAAAdAAAAAAASABQAAAAdAAEAAAASABUAAAAdAAIAAAASABYAAAAdAAMAAAASABcAAAAdAAQAAAASABgAAAAdAAUAAAASABkAAAAdAAYAAAASABoAAAAeAOz/AAATAAAAAAAeAO3/AAATAAEAAAAeAO7/AAATAAIAAAAeAO//AAATAAMAAAAeAPD/AAATAAQAAAAeAPH/AAATAAUAAAAeAPL/AAATAAYAAAAeAPP/AAATAAcAAAAeAPT/AAATAAgAAAAeAPX/AAATAAkAAAAeAPb/AAATAAoAAAAeAPf/AAATAAsAAAAeAPj/AAATAAwAAAAeAPn/AAATAA0AAAAeAPr/AAATAA4AAAAeAPv/AAATAA8AAAAeAPz/AAATABAAAAAeAP3/AAATABEAAAAeAP7/AAATABIAAAAeAP//AAATABMAAAAeAAAAAAATABQAAAAeAAEAAAATABUAAAAeAAIAAAATABYAAAAeAAMAAAATABcAAAAeAAQAAAATABgAAAAeAAUAAAATABkAAAAeAAYAAAATABoAAAAfAOz/AAAUAAAAAAAfAO3/AAAUAAEAAAAfAO7/AAAUAAIAAAAfAO//AAAUAAMAAAAfAPD/AAAUAAQAAAAfAPH/AAAUAAUAAAAfAPL/AAAUAAYAAAAfAPP/AAAUAAcAAAAfAPT/AAAUAAgAAAAfAPX/AAAUAAkAAAAfAPb/AAAUAAoAAAAfAPf/AAAUAAsAAAAfAPj/AAAUAAwAAAAfAPn/AAAUAA0AAAAfAPr/AAAUAA4AAAAfAPv/AAAUAA8AAAAfAPz/AAAUABAAAAAfAP3/AAAUABEAAAAfAP7/AAAUABIAAAAfAP//AAAUABMAAAAfAAAAAAAUABQAAAAfAAEAAAAUABUAAAAfAAIAAAAUABYAAAAfAAMAAAAUABcAAAAfAAQAAAAUABgAAAAfAAUAAAAUABkAAAAfAAYAAAAUABoAAAAgAOz/AAAVAAAAAAAgAO3/AAAVAAEAAAAgAO7/AAAVAAIAAAAgAO//AAAVAAMAAAAgAPD/AAAVAAQAAAAgAPH/AAAVAAUAAAAgAPL/AAAVAAYAAAAgAPP/AAAVAAcAAAAgAPT/AAAVAAgAAAAgAPX/AAAVAAkAAAAgAPb/AAAVAAoAAAAgAPf/AAAVAAsAAAAgAPj/AAAVAAwAAAAgAPn/AAAVAA0AAAAgAPr/AAAVAA4AAAAgAPv/AAAVAA8AAAAgAPz/AAAVABAAAAAgAP3/AAAVABEAAAAgAP7/AAAVABIAAAAgAP//AAAVABMAAAAgAAAAAAAVABQAAAAgAAEAAAAVABUAAAAgAAIAAAAVABYAAAAgAAMAAAAVABcAAAAgAAQAAAAVABgAAAAgAAUAAAAVABkAAAAgAAYAAAAVABoAAAAhAOz/AAAWAAAAAAAhAO3/AAAWAAEAAAAhAO7/AAAWAAIAAAAhAO//AAAWAAMAAAAhAPD/AAAWAAQAAAAhAPH/AAAWAAUAAAAhAPL/AAAWAAYAAAAhAPP/AAAWAAcAAAAhAPT/AAAWAAgAAAAhAPX/AAAWAAkAAAAhAPb/AAAWAAoAAAAhAPf/AAAWAAsAAAAhAPj/AAAWAAwAAAAhAPn/AAAWAA0AAAAhAPr/AAAWAA4AAAAhAPv/AAAWAA8AAAAhAPz/AAAWABAAAAAhAP3/AAAWABEAAAAhAP7/AAAWABIAAAAhAP//AAAWABMAAAAhAAAAAAAWABQAAAAhAAEAAAAWABUAAAAhAAIAAAAWABYAAAAhAAMAAAAWABcAAAAhAAQAAAAWABgAAAAhAAUAAAAWABkAAAAhAAYAAAAWABoAAAAiAOz/AAAXAAAAAAAiAO3/AAAXAAEAAAAiAO7/AAAXAAIAAAAiAO//AAAXAAMAAAAiAPD/AAAXAAQAAAAiAPH/AAAXAAUAAAAiAPL/AAAXAAYAAAAiAPP/AAAXAAcAAAAiAPT/AAAXAAgAAAAiAPX/AAAXAAkAAAAiAPb/AAAXAAoAAAAiAPf/AAAXAAsAAAAiAPj/AAAXAAwAAAAiAPn/AAAXAA0AAAAiAPr/AAAXAA4AAAAiAPv/AAAXAA8AAAAiAPz/AAAXABAAAAAiAP3/AAAXABEAAAAiAP7/AAAXABIAAAAiAP//AAAXABMAAAAiAAAAAAAXABQAAAAiAAEAAAAXABUAAAAiAAIAAAAXABYAAAAiAAMAAAAXABcAAAAiAAQAAAAXABgAAAAiAAUAAAAXABkAAAAiAAYAAAAXABoAAAAjAOz/AAAYAAAAAAAjAO3/AAAYAAEAAAAjAO7/AAAYAAIAAAAjAO//AAAYAAMAAAAjAPD/AAAYAAQAAAAjAPH/AAAYAAUAAAAjAPL/AAAYAAYAAAAjAPP/AAAYAAcAAAAjAPT/AAAYAAgAAAAjAPX/AAAYAAkAAAAjAPb/AAAYAAoAAAAjAPf/AAAYAAsAAAAjAPj/AAAYAAwAAAAjAPn/AAAYAA0AAAAjAPr/AAAYAA4AAAAjAPv/AAAYAA8AAAAjAPz/AAAYABAAAAAjAP3/AAAYABEAAAAjAP7/AAAYABIAAAAjAP//AAAYABMAAAAjAAAAAAAYABQAAAAjAAEAAAAYABUAAAAjAAIAAAAYABYAAAAjAAMAAAAYABcAAAAjAAQAAAAYABgAAAAjAAUAAAAYABkAAAAjAAYAAAAYABoAAAA=")
tile_set = SubResource("TileSet_boqqa")

[node name="missions" type="RichTextLabel" parent="mission_taskbar"]
offset_left = 284.0
offset_top = -286.0
offset_right = 501.0
offset_bottom = -184.0
scale = Vector2(1.26706, 1.9284)
bbcode_enabled = true
text = "[color=black]Get resources from vent
Get glucose from bacteria
Make bread from glucose
Fix electricity
"

[node name="Node2D" type="CharacterBody2D" parent="mission_taskbar"]
position = Vector2(-562, 312)
scale = Vector2(2, 2)
script = ExtResource("17_qhoic")

[node name="mission1" type="AnimatedSprite2D" parent="mission_taskbar/Node2D"]
position = Vector2(395, -288)
scale = Vector2(0.06, 0.06)
sprite_frames = SubResource("SpriteFrames_j3k32")
animation = &"not_check"

[node name="mission2" type="AnimatedSprite2D" parent="mission_taskbar/Node2D"]
position = Vector2(395, -265)
scale = Vector2(0.06, 0.06)
sprite_frames = SubResource("SpriteFrames_j3k32")
animation = &"not_check"

[node name="mission3" type="AnimatedSprite2D" parent="mission_taskbar/Node2D"]
position = Vector2(395, -242)
scale = Vector2(0.06, 0.06)
sprite_frames = SubResource("SpriteFrames_j3k32")
animation = &"not_check"

[node name="mission4" type="AnimatedSprite2D" parent="mission_taskbar/Node2D"]
position = Vector2(395, -220)
scale = Vector2(0.06, 0.06)
sprite_frames = SubResource("SpriteFrames_j3k32")
animation = &"not_check"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, 0)
shape = SubResource("RectangleShape2D_3u0wd")
